first implentation of menu activity
its just the basic design of menu and we should edit logo and colors and background later.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">aa-android</string>
+    <string name="credits">credits</string>
+    <string name="levels">levels</string>
+    <string name="settings">settings</string>
+    <string name="play">play</string>
 </resources>
