updated about-us texts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,35 +8,19 @@
     <string name="title_activity_main2">MainActivity2</string>
     <string name="mahbod_ghadiri_name">مهبد غدیری ثانی</string>
     <string name="mahbod_ghadiri_bio">
-لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
-        چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
-        کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد.
-        این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
-
+        به طور کل توسعه دهنده وب هستم و در واقع این برنامه اولین تجربم با اندرویده. همیشه علاقم این بوده که تکنولوژی‌های جدید رو امتحان کنم و از نحوه کار کردنشون سر در بیارم. این پروژه هم کاملا در راستای همین علاقه بوده تا با زبان برنامه نویسی جدیدی آشنا بشم و به دنیا اندروید اندکی ورود کنم.
     </string>
     <string name="joseph_osanlou_name">یوسف اصانلو</string>
     <string name="joseph_osanlou_bio">
-لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
-        چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
-        کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد.
-        این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
-
+        یک توسعه دهنده جلوی 21 ساله, در حال حاضر دانشجوی رشته علوم کامپیوتر در دانشگاه خوارزمی هستم. علاقه شدیدی به قهوه, ورزش و android studio دارم و به دنبال فرصتی برای کار بر روی پروژه‌های چالش‌برانگیز و نوآورانه هستم.
     </string>
     <string name="danial_azimi_name">دانیال عظیمی</string>
     <string name="danial_azimi_bio">
-لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
-        چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
-        کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد.
-        این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
-
+        دانیالم، ۲۰ سالمه و فرانت اند دولوپر تازه کار هستم. دانشجوی دانشگاه خوارزمی ام و علاقه به یادگیری چیزای جدید دارم.
     </string>
     <string name="armin_jodat_name">آرمین جودت</string>
     <string name="armin_jodat_bio">
-لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
-        چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
-        کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد.
-        این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
-
+        سلام من یک backend دولپر ۲۱ ساله هستم و در حال حاضر دانشجوی cs در دانشگاه خوارزمی هستم.و از ساخت اپ در android لذت میبرم و ایجاد پروژه های خلاقانه  باعث خوشحالی من میشود.
     </string>
     <string name="game"> GAME</string>
     <string name="over"> OVER</string>
