--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,10 @@
     <string name="setting_music_preferences">MUSIC_PREFERENCES</string>
     <string name="setting_close_calls_preferences">CLOSE_CALLS_PREFERENCES</string>
     <string name="setting_language_preferences">LANGUAGE</string>
+    <string-array name="languages">
+        <item>Farsi</item>
+        <item>English</item>
+        <item>German</item>
+    </string-array>
 
 </resources>
