--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -33,7 +33,7 @@
     <string name="highest_completed_level"> HIGHEST_COMPLETED_LEVEL</string>
     <string name="preferences">aa.android.preferences</string>
     <string name="setting_sound_effects"> جلوه های صوتی</string>
-    <string name="setting_music"> موسبقی</string>
+    <string name="setting_music"> موسیقی</string>
     <string name="setting_close_calls">صحنه آهسته</string>
     <string name="setting_language">زبان</string>
     <string name="setting_sound_effects_preferences">SOUND_EFFECT_PREFERENCES</string>
