--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -41,7 +41,13 @@
     <string name="setting_close_calls_preferences">CLOSE_CALLS_PREFERENCES</string>
     <string name="setting_language_preferences">LANGUAGE</string>
     <string-array name="languages">
-        <item>فارسی</item>
         <item>انگلیسی</item>
+        <item>فارسی</item>
+        <item>آلمانی</item>
+    </string-array>
+    <string-array name="LANGUAGE_CODES">
+        <item>en</item>
+        <item>fa</item>
+        <item>de</item>
     </string-array>
 </resources>
