--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,14 +39,16 @@
     <string name="setting_close_calls_preferences" translatable="false">CLOSE_CALLS_PREFERENCES</string>
     <string name="setting_language_preferences" translatable="false">LANGUAGE</string>
     <string-array name="languages">
-        <item>English</item>
-        <item>Farsi</item>
-        <item>Deutsch</item>
+        <item>🇬🇧 English</item>
+        <item>🇮🇷 Farsi</item>
+        <item>🇩🇪 Deutsch</item>
     </string-array>
     <string-array name="LANGUAGE_CODES">
         <item>en</item>
         <item>fa</item>
         <item>de</item>
     </string-array>
+
+    <string name="choose_language">Choose Language</string>
 
 </resources>
